# Ray

./: Cargo.toml  README.md  log_config.yml
benches/: target.rs
src/: lib.rs  logdur.rs  main.rs  range.rs  target.rs  writer.rs
src/ray/: mod.rs  perspective.rs  projection.rs
src/shapes/: sphere.rs
