[package]
name = "ray"
version = "0.1.0"
authors = ["Daniel Miller (Earthmark) <earthmark.miller@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "*"
png = "*"
log = "*"
log4rs = "*"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "target"
harness = false